--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -1,33 +1,44 @@
 add_subdirectory(benchmarks)
 
-add_library(dorado_basecall STATIC
-    # Public
-    include/basecall/crf_utils.h
-    include/basecall/CudaCaller.h
-    include/basecall/CudaModelRunner.h
-    include/basecall/DecodedChunk.h
-    include/basecall/DecodedChunk.h
-    include/basecall/MetalCaller.h
-    include/basecall/MetalModelRunner.h
-    include/basecall/ModelRunner.h
-    include/basecall/ModelRunnerBase.h
-
-    # Private
-    crf_utils.cpp
-    decode/beam_search.cpp
-    decode/beam_search.h
-    decode/CPUDecoder.cpp
-    decode/CPUDecoder.h
-    decode/CUDADecoder.h
-    decode/Decoder.cpp
-    decode/Decoder.h
-    model/CRFModel.cpp
-    model/CRFModel.h
-    model/MetalCRFModel.h
-    model/TxModel.cpp
-    model/TxModel.h
-    ModelRunner.cpp
-    ModelRunnerBase.cpp
+dorado_add_library(dorado_basecall
+    NAME
+        dorado_basecall
+    PUBLIC_DIR
+        basecall
+    SOURCES_PUBLIC
+        crf_utils.h
+        CudaCaller.h
+        CudaModelRunner.h
+        DecodedChunk.h
+        DecodedChunk.h
+        MetalCaller.h
+        MetalModelRunner.h
+        ModelRunner.h
+        ModelRunnerBase.h
+    SOURCES_PRIVATE
+        crf_utils.cpp
+        decode/beam_search.cpp
+        decode/beam_search.h
+        decode/CPUDecoder.cpp
+        decode/CPUDecoder.h
+        decode/CUDADecoder.h
+        decode/Decoder.cpp
+        decode/Decoder.h
+        model/CRFModel.cpp
+        model/CRFModel.h
+        model/MetalCRFModel.h
+        model/TxModel.cpp
+        model/TxModel.h
+        ModelRunner.cpp
+        ModelRunnerBase.cpp
+    DEPENDS_PUBLIC
+        dorado_config
+        dorado_nn
+        dorado_torch_utils
+        dorado_utils
+        torch_lib
+    DEPENDS_PRIVATE
+        spdlog::spdlog
 )
 
 if(APPLE)
@@ -47,28 +58,6 @@ else()
     target_link_libraries(dorado_basecall PRIVATE dorado_benchmarks)
 endif()
 
-target_link_libraries(dorado_basecall
-    PUBLIC
-        dorado_config
-        dorado_nn
-        dorado_torch_utils
-        dorado_utils
-        torch_lib
-    PRIVATE
-        spdlog::spdlog
-)
-
 if (TARGET koi)
     target_link_libraries(dorado_basecall PRIVATE koi)
-endif()
-
-target_include_directories(dorado_basecall
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-enable_warnings_as_errors(dorado_basecall)
-
-if (DORADO_ENABLE_PCH)
-    target_precompile_headers(dorado_basecall REUSE_FROM dorado_pch)
 endif()
