--- a/dorado/compat/CMakeLists.txt
+++ b/dorado/compat/CMakeLists.txt
@@ -1,14 +1,11 @@
-add_library(dorado_compat
-    # Public
-    include/compat/compat_utils.h
-
-    # Private
-    compat_utils.cpp
+dorado_add_library(
+    NAME
+        dorado_compat
+    PUBLIC_DIR
+        compat
+    SOURCES_PUBLIC
+        compat_utils.h
+    SOURCES_PRIVATE
+        compat_utils.cpp
+    NO_TORCH
 )
-
-target_include_directories(dorado_compat
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-enable_warnings_as_errors(dorado_compat)
