--- a/dorado/model_downloader/CMakeLists.txt
+++ b/dorado/model_downloader/CMakeLists.txt
@@ -1,11 +1,23 @@
-add_library(dorado_model_downloader_lib STATIC
-    # Public
-    include/model_downloader/model_downloader.h
-
-    # Private
-    downloader.cpp
-    downloader.h
-    model_downloader.cpp
+dorado_add_library(
+    NAME
+        dorado_model_downloader_lib
+    PUBLIC_DIR
+        model_downloader
+    SOURCES_PUBLIC
+        model_downloader.h
+    SOURCES_PRIVATE
+        downloader.cpp
+        downloader.h
+        model_downloader.cpp
+    DEPENDS_PUBLIC
+        dorado_models_lib
+    DEPENDS_PRIVATE
+        dorado_utils
+        elzip
+        httplib
+        OpenSSL::SSL
+        spdlog::spdlog
+    NO_TORCH
 )
 
 if (APPLE)
@@ -18,21 +30,3 @@ target_compile_definitions(dorado_model_downloader_lib
         DORADO_MODELS_HAS_HTTPLIB=1
         DORADO_MODELS_HAS_CURL_EXE=1
 )
-
-target_link_libraries(dorado_model_downloader_lib
-    PUBLIC
-        dorado_models_lib
-    PRIVATE
-        dorado_utils
-        elzip
-        httplib
-        OpenSSL::SSL
-        spdlog::spdlog
-)
-
-target_include_directories(dorado_model_downloader_lib
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-enable_warnings_as_errors(dorado_model_downloader_lib)
