--- a/dorado/read_pipeline/nodes/CMakeLists.txt
+++ b/dorado/read_pipeline/nodes/CMakeLists.txt
@@ -1,62 +1,62 @@
-add_library(dorado_read_pipeline_nodes STATIC
-    # Public
-    include/read_pipeline/nodes/AdapterDetectorNode.h
-    include/read_pipeline/nodes/AlignerNode.h
-    include/read_pipeline/nodes/BarcodeClassifierNode.h
-    include/read_pipeline/nodes/BarcodeDemuxerNode.h
-    include/read_pipeline/nodes/BasecallerNode.h
-    include/read_pipeline/nodes/BaseSpaceDuplexCallerNode.h
-    include/read_pipeline/nodes/CorrectionInferenceNode.h
-    include/read_pipeline/nodes/CorrectionPafWriterNode.h
-    include/read_pipeline/nodes/DuplexReadTaggingNode.h
-    include/read_pipeline/nodes/HtsWriterNode.h
-    include/read_pipeline/nodes/ModBaseCallerNode.h
-    include/read_pipeline/nodes/ModBaseChunkCallerNode.h
-    include/read_pipeline/nodes/NullNode.h
-    include/read_pipeline/nodes/PairingNode.h
-    include/read_pipeline/nodes/PolyACalculatorNode.h
-    include/read_pipeline/nodes/ReadFilterNode.h
-    include/read_pipeline/nodes/ReadForwarderNode.h
-    include/read_pipeline/nodes/ReadSplitNode.h
-    include/read_pipeline/nodes/ReadToBamTypeNode.h
-    include/read_pipeline/nodes/ScalerNode.h
-    include/read_pipeline/nodes/StereoDuplexEncoderNode.h
-    include/read_pipeline/nodes/SubreadTaggerNode.h
-    include/read_pipeline/nodes/TrimmerNode.h
-
-    # Private
-    AdapterDetectorNode.cpp
-    AlignerNode.cpp
-    BarcodeClassifierNode.cpp
-    BarcodeDemuxerNode.cpp
-    BasecallerNode.cpp
-    BaseSpaceDuplexCallerNode.cpp
-    CMakeLists.txt
-    CorrectionInferenceNode.cpp
-    CorrectionPafWriterNode.cpp
-    DuplexReadTaggingNode.cpp
-    HtsWriterNode.cpp
-    ModBaseCallerNode.cpp
-    ModBaseChunkCallerNode.cpp
-    NullNode.cpp
-    PairingNode.cpp
-    PolyACalculatorNode.cpp
-    ReadFilterNode.cpp
-    ReadForwarderNode.cpp
-    ReadSplitNode.cpp
-    ReadToBamTypeNode.cpp
-    ScalerNode.cpp
-    StereoDuplexEncoderNode.cpp
-    SubreadTaggerNode.cpp
-    TrimmerNode.cpp
-)
-
-target_link_libraries(dorado_read_pipeline_nodes
-    PUBLIC
+dorado_add_library(
+    NAME
+        dorado_read_pipeline_nodes
+    PUBLIC_DIR
+        read_pipeline/nodes
+    SOURCES_PUBLIC
+        AdapterDetectorNode.h
+        AlignerNode.h
+        BarcodeClassifierNode.h
+        BarcodeDemuxerNode.h
+        BasecallerNode.h
+        BaseSpaceDuplexCallerNode.h
+        CorrectionInferenceNode.h
+        CorrectionPafWriterNode.h
+        DuplexReadTaggingNode.h
+        HtsWriterNode.h
+        ModBaseCallerNode.h
+        ModBaseChunkCallerNode.h
+        NullNode.h
+        PairingNode.h
+        PolyACalculatorNode.h
+        ReadFilterNode.h
+        ReadForwarderNode.h
+        ReadSplitNode.h
+        ReadToBamTypeNode.h
+        ScalerNode.h
+        StereoDuplexEncoderNode.h
+        SubreadTaggerNode.h
+        TrimmerNode.h
+    SOURCES_PRIVATE
+        AdapterDetectorNode.cpp
+        AlignerNode.cpp
+        BarcodeClassifierNode.cpp
+        BarcodeDemuxerNode.cpp
+        BasecallerNode.cpp
+        BaseSpaceDuplexCallerNode.cpp
+        CMakeLists.txt
+        CorrectionInferenceNode.cpp
+        CorrectionPafWriterNode.cpp
+        DuplexReadTaggingNode.cpp
+        HtsWriterNode.cpp
+        ModBaseCallerNode.cpp
+        ModBaseChunkCallerNode.cpp
+        NullNode.cpp
+        PairingNode.cpp
+        PolyACalculatorNode.cpp
+        ReadFilterNode.cpp
+        ReadForwarderNode.cpp
+        ReadSplitNode.cpp
+        ReadToBamTypeNode.cpp
+        ScalerNode.cpp
+        StereoDuplexEncoderNode.cpp
+        SubreadTaggerNode.cpp
+        TrimmerNode.cpp
+    DEPENDS_PUBLIC
         dorado_alignment
         dorado_read_pipeline_base
         dorado_utils
-    PRIVATE
+    DEPENDS_PRIVATE
         cxxpool
         dorado_basecall
         dorado_correct
@@ -66,10 +66,3 @@ target_link_libraries(dorado_read_pipeline_nodes
         dorado_splitter
         spdlog::spdlog
 )
-
-target_include_directories(dorado_read_pipeline_nodes
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-enable_warnings_as_errors(dorado_read_pipeline_nodes)
