--- a/dorado/models/CMakeLists.txt
+++ b/dorado/models/CMakeLists.txt
@@ -1,26 +1,22 @@
-add_library(dorado_models_lib STATIC
-    # Public
-    include/models/kits.h
-    include/models/metadata.h
-    include/models/model_complex.h
-    include/models/models.h
-
-    # Private
-    kits.cpp
-    metadata.cpp
-    model_complex.cpp
-    models.cpp
-)
-
-target_link_libraries(dorado_models_lib
-    PRIVATE
+dorado_add_library(
+    NAME
+        dorado_models_lib
+    PUBLIC_DIR
+        models
+    SOURCES_PUBLIC
+        kits.h
+        metadata.h
+        model_complex.h
+        models.h
+    SOURCES_PRIVATE
+        kits.cpp
+        metadata.cpp
+        model_complex.cpp
+        models.cpp
+    DEPENDS_PUBLIC
+        # nothing
+    DEPENDS_PRIVATE
         dorado_utils
         spdlog::spdlog
+    NO_TORCH
 )
-
-target_include_directories(dorado_models_lib
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-enable_warnings_as_errors(dorado_models_lib)
