--- a/dorado/secondary/common/CMakeLists.txt
+++ b/dorado/secondary/common/CMakeLists.txt
@@ -1,33 +1,28 @@
-add_library(dorado_secondary_common
-    # Public
-    include/secondary/common/bam_file.h
-    include/secondary/common/bam_info.h
-    include/secondary/common/batching.h
-    include/secondary/common/interval.h
-    include/secondary/common/region.h
-    include/secondary/common/stats.h
-    include/secondary/common/variant.h
-    include/secondary/common/vcf_writer.h
-
-    # Private
-    bam_file.cpp
-    bam_info.cpp
-    batching.cpp
-    region.cpp
-    variant.cpp
-    vcf_writer.cpp
-)
-
-target_include_directories(dorado_secondary_common
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-target_link_libraries(dorado_secondary_common
-    PUBLIC
+dorado_add_library(
+    NAME
+        dorado_secondary_common
+    PUBLIC_DIR
+        secondary/common
+    SOURCES_PUBLIC
+        bam_file.h
+        bam_info.h
+        batching.h
+        interval.h
+        region.h
+        stats.h
+        variant.h
+        vcf_writer.h
+    SOURCES_PRIVATE
+        bam_file.cpp
+        bam_info.cpp
+        batching.cpp
+        region.cpp
+        variant.cpp
+        vcf_writer.cpp
+    DEPENDS_PUBLIC
         dorado_torch_utils
         dorado_utils
-    PRIVATE
+    DEPENDS_PRIVATE
         cxxpool
         dorado_version
         htslib
@@ -35,5 +30,3 @@ target_link_libraries(dorado_secondary_common
         kadayashi::haplotag_lib
         spdlog::spdlog
 )
-
-enable_warnings_as_errors(dorado_secondary_common)
