--- a/dorado/summary/CMakeLists.txt
+++ b/dorado/summary/CMakeLists.txt
@@ -1,21 +1,16 @@
-add_library(dorado_summary STATIC
-    # Public
-    include/summary/summary.h
-
-    # Private
-    summary.cpp
-)
-
-target_link_libraries(dorado_summary
-    PRIVATE
+dorado_add_library(
+    NAME
+        dorado_summary
+    PUBLIC_DIR
+        summary
+    SOURCES_PUBLIC
+        summary.h
+    SOURCES_PRIVATE
+        summary.cpp
+    DEPENDS_PUBLIC
+        # nothing
+    DEPENDS_PRIVATE
         dorado_lib
         dorado_utils
         spdlog::spdlog
 )
-
-target_include_directories(dorado_summary
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-
-enable_warnings_as_errors(dorado_summary)
