[DOR-1265] Move context_container into utils
We need this in ont_core without torch.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -16,6 +16,7 @@ dorado_add_library(
         concurrency/multi_queue_thread_pool.h
         concurrency/synchronisation.h
         concurrency/task_priority.h
+        context_container.h
         crypto_utils.h
         dev_utils.h
         fasta_fastq_utils.h
