--- a/dorado/alignment/CMakeLists.txt
+++ b/dorado/alignment/CMakeLists.txt
@@ -11,7 +11,6 @@ dorado_add_library(
         IndexFileAccess.h
         minimap2_args.h
         minimap2_wrappers.h
-        Minimap2Aligner.h
         Minimap2Index.h
         Minimap2IndexSupportTypes.h
         Minimap2Options.h
@@ -22,7 +21,6 @@ dorado_add_library(
         BedFileAccess.cpp
         IndexFileAccess.cpp
         minimap2_args.cpp
-        Minimap2Aligner.cpp
         Minimap2Index.cpp
         Minimap2Options.cpp
         sam_utils.cpp
@@ -30,7 +28,9 @@ dorado_add_library(
         htslib
         minimap2
         dorado_utils
-        dorado_read_pipeline_base
     DEPENDS_PRIVATE
         spdlog::spdlog
+    # Minimap2Aligner.cpp was moved to another target to allow
+    # this one to be torch-less.
+    NO_TORCH
 )
