[DOR-1265] Make dorado_utils PIC
The client library in ont_core needs this since it's shared.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -102,6 +102,7 @@ dorado_add_library(
         htslib
         minimap2
     NO_TORCH
+    POSITION_INDEPENDENT_CODE
 )
 
 target_compile_definitions(dorado_utils
